<resources>
    <string name="app_name">Mission Asset Fund</string>
    <string name="title_add_goal">Add Goal</string>
    <string name="title_liquid_asset">Transactions</string>
    <string name="title_goal_details">Goals</string>
    <string name="label_liquid_assets">TOTAL CASH</string>
    <string name="label_spent_today">SPENT TODAY</string>
    <string name="label_spent_this_week">SPENT THIS WEEK</string>
    <string name="next_payment_label">NEXT PAYMENT OF</string>
    <string name="label_due_date">Due On</string>
    <string name="label_receive">TOTAL GOAL</string>
    <string name="nothing"></string>
    <string name="label_new_savings_goal">Add New Savings Goal</string>
    <string name="label_goal_payment">Make Goal Payment</string>
    <string name="label_new_goal_name">Goal Name</string>
    <string name="label_amount">Amount</string>
    <string name="label_goal_frequency">Frequency</string>
    <string name="label_goal_due_date">Due Date</string>
    <string name="action_logout">Logout</string>
    <string name="parse_signup_button_text">Create Account</string>
    <string name="parse_login_button_text">Log In</string>
    <string name="label_btn_cancel">Cancel</string>
    <string name="label_btn_create_goal">Create Goal</string>
    <string name="label_btn_goal_payment">Make Payment</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="label_add_transaction_btn">Add Transaction</string>
    <string name="label_transaction_name">Transaction Name</string>
    <string name="label_category">Category</string>
    <string name="label_transaction_amount">Amount</string>
    <string name="label_transaction_date">Date</string>
    <string name="goal_payment_human">Payment %1$d of %2$d</string>
    <string name="default_date_in_case_null">NA</string>
    <string name="goal_payment_desc">Goal Payment</string>
    <string name="label_total_liquid_assets">TOTAL LIQUID ASSETS</string>
    <string name="label_monthly_goals">MONTHLY GOALS</string>
    <string name="label_dashboard_title">Dashboard</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="hint_user_fullname">Name</string>
    <string name="hint_user_email">E-mail</string>
    <string name="hint_user_password">Password</string>
    <string name="save_profile">Save Profile</string>
    <string name="label_transaction_type">Type</string>
    <string name="label_income">Income</string>
    <string name="label_expense">Expense</string>
    <string name="title_activity_new_goal">New Goal</string>
    <string name="goal_due_date_today">DUE IN TODAY</string>
    <string name="goal_due_date_tomorrow">DUE IN TOMORROW</string>
    <string name="goal_due_date_days">DUE IN %1$d DAYS</string>
    <string name="goal_due_date">DUE %1$s</string>
    <string name="goal_due_date_custom_format">&#160; %1$s (%2$s) </string>
    <string name="label_goal_payments_made"> %1$d OF %2$d PAYMENTS MADE</string>
    <string name="label_saved_to_date"> %1$s SAVED TO DATE</string>
    <string name="label_lending_circle_payment"> LENDING CIRCLE PAYMENT</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_post"> post </string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_title_with_total_cash">Dashboard (%1$s Total Cash)</string>
    <string name="dashboard_subtitle_cash_available">Cash Available %1$s</string>
    <string name="dashboard_total_cash_label">TOTAL CASH</string>
    <string name="dashboard_goal_item_due_date_today">due in today</string>
    <string name="dashboard_goal_item_due_date_tomorrow">due in tomorrow</string>
    <string name="dashboard_goal_item_due_date_days">due in %1$d days</string>
    <string name="dashboard_goal_item_due_date">due %1$s</string>
    <string name="dashboard_goal_item_complete_label">COMPLETE</string>
    <string name="lc_item_due_date_today">Payment Due in Today</string>
    <string name="lc_item_due_date_tomorrow">Payment Due in Tomorrow</string>
    <string name="lc_item_due_date_days">Payment Due in %1$d days</string>
    <string name="lc_item_due_date">Payment Due %1$s</string>
    <plurals name="dashboard_milestones_left_human">
        <item quantity="zero">No payments left</item>
        <item quantity="one">%d payment left</item>
        <item quantity="other">%d payments left</item>
    </plurals>
    <string name="dashboard_spent_chart_title">Cash Spent</string>
    <string name="dashboard_add_transaction_btn_description">Add a new transaction</string>
    <string name="initial_setup_title">Enter Current Cash balance</string>
    <string name="initial_setup_transaction_name">Initial Setup</string>
    <string name="initial_setup_toast_successful_message">Account successfully setup.</string>
    <string name="initial_setup_category_bills_object_id">1KE7OZ8QUy</string>
    <string name="add_goal_payment_transaction_name">\'%1$s\' goal payment</string>
    <string name="parse_success_user_save">User profile updated!</string>
    <string name="parse_error_password_missing">Password is missing&#8230;</string>
    <string name="error_user_name_required">Name is required</string>
    <string name="error_user_password_required">Password is required</string>
    <string name="error_parse_date">date parsing issue</string>
    <string name="parse_error_saving">Oops! something is wrong saving. Try again&#8230;</string>
    <string name="parse_error_querying">Oops! something is wrong reading data.</string>
    <string name="parse_success_transaction_save">Transaction saved!</string>
    <string name="toast_done_saving_goal">Done saving goal.</string>
    <string name="error_amount_require">Oops! No amount added</string>
    <string name="error_name_require">Oops! No name added</string>
    <string name="error_category_require">Oops! No category selected</string>
    <string name="sample_avg_per_day">AVG $5.62 PER DAY</string>
    <string name="sample_remaining_amount">$234.64</string>
    <string name="sample_spent_today">$42.00</string>
    <string name="sample_goal_title">Lending Circle Bill</string>
    <string name="sample_goal_name">Lending Circle</string>
    <string name="sample_total_payment">$35.00</string>
    <string name="sample_saved_to_date">$35.00 SAVED TO DATE</string>
    <string name="sample_payment_number">payment 5 of 10</string>
    <string name="sample_goal_due_date">06/10/14</string>
    <string name="sample_goal_frequency">Monthly</string>
    <string name="sample_due_date">JUL 25</string>
    <string name="sample_due_date_human_goal_details">&#160; DUE IN 2 DAYS (JULY 15) </string>
    <string name="sample_new_goal_name">Vegas Trip</string>
    <string name="sample_name">Amit B. </string>
    <string name="smaple_new_transaction_name">Lunch</string>
    <string name="sample_due_date_human">DUE IN 2 DAYS</string>
    <string name="sample_new_transaction_name">Lunch</string>
    <string name="sample_milestones_left">4 MILESTONES LEFT</string>
    <string name="sample_transaction_name">Dinner &amp; Drinks</string>
    <string name="sample_transaction_category">ENTERTAINMENT</string>
    <string name="sample_transaction_amount">($25.00)</string>
    <string name="sample_post_type">MESSAGE</string>
    <string name="sample_post">How\'s it going?</string>
    <string name="sample_goal_percentage_complete">50%</string>
    <string name="com_parse_ui_logo_content_description">Logo</string>
    <string name="com_parse_ui_progress_dialog_text">Loading&#8230;</string>
    <string name="com_parse_ui_username_input_hint">Username</string>
    <string name="com_parse_ui_password_input_hint">Password</string>
    <string name="com_parse_ui_forgot_password_button_label"><u>Forgot password</u></string>
    <string name="com_parse_ui_parse_login_button_label">Log in</string>
    <string name="com_parse_ui_parse_signup_button_label">Sign up</string>
    <string name="com_parse_ui_facebook_login_button_label">Log in with Facebook</string>
    <string name="com_parse_ui_twitter_login_button_label">Log in with Twitter</string>
    <string name="com_parse_ui_email_input_hint">Email</string>
    <string name="com_parse_ui_confirm_password_input_hint">Re-enter password</string>
    <string name="com_parse_ui_name_input_hint">Name</string>
    <string name="com_parse_ui_create_account_button_label">Create account</string>
    <string name="com_parse_ui_no_username_toast">Please enter your username</string>
    <string name="com_parse_ui_no_password_toast">Please enter your password</string>
    <string name="com_parse_ui_parse_login_invalid_credentials_toast">The username and password you entered don\'t match</string>
    <string name="com_parse_ui_parse_login_failed_unknown_toast">Could not log in, please try again later</string>
    <string name="com_parse_ui_facebook_login_failed_toast">Facebook login failed</string>
    <string name="com_parse_ui_twitter_login_failed_toast">Twitter login failed</string>
    <plurals name="com_parse_ui_password_too_short_toast">
        <item quantity="one">Password must be at least %d character long</item>
        <item quantity="other">Password must be at least %d characters long</item>
    </plurals>
    <string name="com_parse_ui_username_taken_toast">Username is already taken, please choose a different one</string>
    <string name="com_parse_ui_reenter_password_toast">Please re-enter your password</string>
    <string name="com_parse_ui_mismatch_confirm_password_toast">Passwords don\'t match, please try again</string>
    <string name="com_parse_ui_no_email_toast">Please enter your email</string>
    <string name="com_parse_ui_invalid_email_toast">Email is invalid, please correct it and try again</string>
    <string name="com_parse_ui_email_taken_toast">Email is already taken, please reset your password instead</string>
    <string name="com_parse_ui_no_name_toast">Please enter your name</string>
    <string name="com_parse_ui_signup_failed_unknown_toast">Could not sign up, please try again later</string>
    <string name="com_parse_ui_login_help_instructions">Enter your email to recover your password</string>
    <string name="com_parse_ui_login_help_email_input_hint">Email</string>
    <string name="com_parse_ui_login_help_submit_button_label">Submit</string>
    <string name="com_parse_ui_login_help_login_again_button_label">Back to Login</string>
    <string name="com_parse_ui_login_help_submit_failed_unknown">Failed to request password reset, please try again</string>
    <string name="com_parse_ui_login_help_email_sent">Please check your email for instructions on how to access your account</string>
    <string name="com_parse_ui_login_warning_layout_missing_username_field">Layout missing username field</string>
    <string name="com_parse_ui_login_warning_layout_missing_password_field">Layout missing password field</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_button">Layout missing login button</string>
    <string name="com_parse_ui_login_warning_layout_missing_signup_button">Layout missing signup button</string>
    <string name="com_parse_ui_login_warning_layout_missing_login_help_button">Layout missing login help button</string>
    <string name="com_parse_ui_login_warning_disabled_username_password_login">Disabled username/password login and signup because of missing layout elements</string>
    <string name="com_parse_ui_login_warning_disabled_facebook_login">Layout missing Facebook login button, disabled Facebook login</string>
    <string name="com_parse_ui_login_warning_disabled_twitter_login">Layout missing Twitter login button, disabled Twitter login</string>
    <string name="com_parse_ui_login_warning_parse_login_failed">"Parse username/password login failed, exception: "</string>
</resources>