<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvGoalName"
        style="@style/DashboardMediumText"
        android:layout_marginLeft="10dp"
        android:text="@string/sample_goal_name" />

    <TextView
        android:id="@+id/tvGoalDueDate"
        style="@style/DashboardSmallText"
        android:layout_alignLeft="@+id/tvGoalName"
        android:layout_below="@+id/tvGoalName"
        android:layout_marginTop="5dp"
        android:text="@string/sample_due_date_human" />

    <TextView
        android:id="@+id/tvPaymentDue"
        style="@style/MediumAmount"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:text="@string/sample_total_payment"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>