<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dashboard_goal_item_background"
    android:orientation="vertical" >
    
        <ImageView
        android:id="@+id/ivCommenterProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:src="@drawable/profile_1"
        android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvCommenterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivCommenterProfile"
            android:text="@string/sample_post_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvCommentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCommenterName"
            android:layout_alignLeft="@+id/tvCommenterName"
            android:text="@string/sample_post"
            android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>