<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlLendingCircle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:visibility="gone" >

        <android.support.v4.view.ViewPager
            android:id="@+id/vpLendingCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rlFinalTargetData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTotalTargetLabel"
            style="@style/SmallText"
            android:text="@string/label_receive" />

        <TextView
            android:id="@+id/tvTotalTargetPayment"
            style="@style/LargeAmount"
            android:text="@string/sample_total_payment" />

        <TextView
            android:id="@+id/tvSavedToDate"
            style="@style/SmallText"
            android:text="@string/sample_saved_to_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rlGoalData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNextPaymentLabel"
            style="@style/SmallText"
            android:text="@string/next_payment_label" />

        <TextView
            android:id="@+id/tvPaymentDue"
            style="@style/LargeAmount"
            android:text="@string/sample_total_payment" />

        <TextView
            android:id="@+id/tvDueDateHuman"
            style="@style/SmallText"
            android:drawableLeft="@drawable/img_time_red"
            android:text="@string/sample_due_date_human_goal_details" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/btnMakePayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/make_goal_payment_button"
            android:contentDescription="@string/label_btn_goal_payment"
            android:onClick="onMakePayment" />

        <TextView
            android:id="@+id/tvNumPayments"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_payment_label" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbGoalPayment"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:progress="60"
        android:progressDrawable="@drawable/goal_payment_progress_bar" />

</LinearLayout>