<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lc_goal_post_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rlPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/ivPosterProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/profile_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivPosterProfile"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/ivPostType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="15dp"
                android:src="@drawable/img_newpost_post" />

            <TextView
                android:id="@+id/tvPostText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sample_post"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvPaymentDue"
            style="@style/MediumAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/sample_total_payment"
            android:textColor="@color/app_green"
            android:visibility="gone" />
    </RelativeLayout>

    <ListView
        android:id="@+id/llComents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlPost" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lc_goal_comments_bg" >

        <!-- <ImageView -->
        <!-- android:id="@+id/ivPosterProfile" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentLeft="true" -->
        <!-- android:layout_centerVertical="true" -->
        <!-- android:layout_marginBottom="15dp" -->
        <!-- android:layout_marginLeft="60dp" -->
        <!-- android:layout_marginTop="15dp" -->
        <!-- android:contentDescription="@string/app_name" -->
        <!-- android:src="@drawable/profile_1" /> -->

        <EditText
            android:id="@+id/etComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/comment_edit_text"
            android:ems="10"
            android:hint="Comment..."
            android:imeOptions="actionSend"
            android:inputType="text"
            android:padding="10dp" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

</RelativeLayout>